--- a/main.css
+++ b/main.css
@@ -35,7 +35,7 @@ h2 {
 .cover {
     display: block;
     position: absolute;
-    margin-left: 390px;
+    margin-left: 580px;
     margin-top: -225px;
     animation: slideinfrombot 0.5s ease, slideoutfromright 0.4s ease;
     animation-delay: 0s, 0.8s;
@@ -142,7 +142,7 @@ ul li img {
 		opacity: 1;
 	}
 	100% {
-		transform: translateX(-25%);
+		transform: translateX(-20%);
 		opacity: 0;
 	}
 }
@@ -168,6 +168,10 @@ ul li img {
 }
 
 @media only screen and (max-width: 768px) {
+
+body {
+    overflow-y: show;
+}
 
 .grid {
     display: flex;
