--- a/main.css
+++ b/main.css
@@ -170,7 +170,7 @@ ul li img {
 @media only screen and (max-width: 768px) {
 
 body {
-    overflow-y: show;
+    overflow-y: visible;
 }
 
 .grid {
