--- a/main.css
+++ b/main.css
@@ -20,6 +20,7 @@ h1 {
     font-size: 4.5em;
     color: #efefef;
     line-height: 1em;
+    letter-spacing: 2px;
 }
 
 h2 {
@@ -29,6 +30,7 @@ h2 {
     line-height: 1.5em;
     margin-top: -2em;
     margin-bottom: 1.5em;
+    letter-spacing: 2px;
 }
 
 .cover {
